<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        app:title="@string/app_name">

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/layout_textview_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to Online Exam Checker app which can be used to scan for Users NID to check their validity on Passign Driving License Exam"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@color/red"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_type" />

        <TextView
            android:id="@+id/textview_bar_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:background="#20888888"
            android:gravity="start|center"
            android:text="@string/bar_type"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/scan_result" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_scan_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#20888888"
                android:layout_margin="5dp"
                android:text="@string/scan_result"
                android:textSize="25sp"
                android:textStyle="bold" />

        </ScrollView>

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_event"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:text="Intent Broadcast Result Type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" >

        <CheckBox
            android:id="@+id/check_autoscan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:layout_margin="5dp"
            android:text="@string/auto_scan"
            android:visibility="gone"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/check_beep"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/beep"
            android:visibility="gone"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_scan_on"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/scan_on"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_scan_off"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:text="@string/scan_off"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_enalbe_upc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:text="@string/enable_upc"
            android:visibility="gone"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_disalbe_upc"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:text="@string/disable_upc"
            android:visibility="gone"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_prop_enalbe"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:text="@string/property_disable"
        android:visibility="gone"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/txt_scan_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Welcome to Online Exam Checker app which can be used to scan for Users NID to check their validity on Passign Driving License Exam"
        android:padding="5dp"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:background="@color/red"
        android:visibility="gone"
        />
</LinearLayout>